     use the model field of their ancestor. 
    But hell, we wont fight for 8 bytes per host, will we?
    TODO: integrate the properties into that ancestor
  * Rename model methods:
    action_free -> action_unref
    action_change_state -> action_state_set
    action_get_state    -> action_state_get
  * Change model methods into classical functions:
    action_use  -> surf_action_ref
    
 XBT:
  * Add xbt_set_get_by_name_or_null() [Silas De Munck]
  * Add xbt_graph_node_get_outedges() [Silas De Munck]

 -- Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>

SimGrid (3.3.1) stable; urgency=low

 OVERALL CHANGES:
  * Implement a --cfg-help to show existing configuration variables
  * Build chain do not require doxygen in maintainer mode

 GRAS:
  * fix a bug on struct sizeof computation, which prevented the
    exchange of arrays of structs in some conditions
    - added a regression test about this in datadesc_usage
  * Allow the exchange of 0-long dynamic vectors.
    - for that, use -1 as indicator of dynamic size instead of 0
    - This implied to change any size from unsigned long to long,
      reducing a bit communication abilities, but I guess that with
      64bits being quite common, this is more than enough.
    - This also induce a protocol change, thus bumping network protocol
      version from 0 to 1 (if we have external users, we have to get
      clean on that point too ;)
    - added two regression tests about this in datadesc_usage
  * Be more verbose when propagating local exceptions
    This helps debugging.
  * Display the status of simulated processes when receiving SIGINT in
    simulation mode

 MSG:
  * Allow to control the simulation from a trace file.
    New functions MSG_action_register() and MSG_action_trace_run()
    The first one allows to associate a function execution to each
     kind of action while the second one parses a trace file and
     triggers the corresponding actions within the system.