@@ -46,10 +46,8 @@ typedef struct surf_action_network_CM02 {
 } s_surf_action_network_CM02_t, *surf_action_network_CM02_t;
 
 extern int card_number;
-extern link_CM02_t **routing_table;
-extern int *routing_table_size;
+extern xbt_dynar_t *routing_table;
 
 #define ROUTE(i,j) routing_table[(i)+(j)*host_number]
-#define ROUTE_SIZE(i,j) routing_table_size[(i)+(j)*host_number]
 
 #endif /* _SURF_NETWORK_PRIVATE_H */
